@@ -67,9 +67,9 @@ recipes {
     carbon-value: I:coal@1 DEFAULT //charcoal
 
     carbon-value: OD:logWood => 1600
-    carbon-value: OD:plankWood => 400
+    carbon-value: OD:plankWood => 350
 
-    carbon-value: OD:pulpWood => 1600
+    carbon-value: OD:pulpWood => 200
     carbon-value: OD:dustCoal => 1600
     carbon-value: OD:dustCharcoal => 1600
 
@@ -111,7 +111,7 @@ recipes {
         carbon-value: I:extrautils2:ingredients@4 DEFAULT
     }
 
-    if HaveOD crystalCrudeOil {
-    carbon-value: OD:crystalCrudeOil => 32000
+    if HaveOD bitumen {
+    carbon-value: OD:bitumen => 1600
     }
 }
