@@ -3,7 +3,7 @@
 cache {
     # Waits as many hours, until it checks again. [range: 0 ~ 168, default: 24]
     I:interval=24
-    S:lastCheck=1520799180813
+    S:lastCheck=1520903270941
 }
 
 
