@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Mar 12 00:34:13 EDT 2018
+#Mon Mar 12 21:52:21 EDT 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
