@@ -36,6 +36,7 @@ data {
         oreAstralStarmetal;40
         oreIridium;180
         oreTungsten;130
+        ore:oreDark;200
      >
 }
 
