@@ -520,7 +520,7 @@ world2177 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=troph
+    S:filterText=peat
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
