@@ -1,5 +1,5 @@
 #Splash screen properties
-#Mon Mar 12 00:30:18 EDT 2018
+#Mon Mar 12 21:49:36 EDT 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
